# gallowglass

./: .gitignore  AUDIT.md  CLAUDE.md  DECISIONS.md  IO.md  MAP.md  Makefile  README.md  ROADMAP.md  SPEC.md  feedback_for_gallowglass.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: README.md  baseline_legacy.json  baseline_marduk.json  run.py
bootstrap/: BOOTSTRAP.md  ast.py  bplan_deps.py  build.py  build_prelude.py  codegen.py  emit.py  emit_pla.py  emit_seed.py  exhaustiveness.py  glass_ir.py  glass_ir_debug.py  ide.py  jupyter_kernel.py  lexer.py  mcp_server.py  parser.py  pin.py  render_demo.py  repl.py  rplan_deps.py  scope.py  typecheck.py  value_render.py
bootstrap/archive/sire/: README.md  ast.sire  codegen.sire  emit.sire  lower.sire  parser.sire  token.sire  (+1 more)
bootstrap/src/: lexer.sire  main.sire  prelude.sire  scope.sire
compiler/: CODEGEN_PLAN.md  COMPILER.md
compiler/src/: Compiler.gls
demos/: README.md  calculator.gls  csv_table.gls  repl_calc.gls  run_repl.sh
dev/docker/: Dockerfile
dev/harness/: bplan.py  eval.py  marduk.py  pin_store.py  plan.py  run.py  seed.py
doc/: language-guide.md  phrasebook.md
editor/vscode/: .vscodeignore  README.md  language-configuration.json  package.json
gallowglass_kernel/: __init__.py  __main__.py  _cli.py
plans/: marduk-default-flip.md  mcp_starter.md  phase_g_2.md  phase_h_handoff.md  phase_i_rc3.md  phase_i_rc4.md
prelude/: PRELUDE.md
prelude/manifest/: Core.Bool.json  Core.Combinators.json  Core.List.json  Core.Nat.json  Core.Option.json  Core.Pair.json  Core.Result.json  Core.Text.json  prelude.json
spec/: 00-primitives.md  01-glass-ir.md  02-mutual-recursion.md  03-exhaustiveness.md  04-plan-encoding.md  05-type-system.md  06-surface-syntax.md  07-seed-format.md
tests/: TESTS.md
tests/bootstrap/: test_bootstrap.py  test_codegen.py  test_coverage_gaps.py  test_data_csv.py  test_emit_pla.py  test_exhaustiveness.py  test_glass_ir.py  test_ide.py  test_jupyter_kernel.py  test_lexer.py  test_m20_syntax.py  test_mcp_server.py  test_mcp_stdio.py  test_modules.py  test_parser.py  test_pin.py  test_pin_wrap.py  test_programs.py  test_scope.py  test_tutorials.py  test_typecheck.py  test_typeclasses.py
tests/compiler/: test_driver.py  test_emit.py  test_lexer.py  test_m11.py  test_m12_effects.py  test_m15.py  test_scope.py  test_selfhost.py  test_utils.py
tests/demos/: test_calculator.py  test_csv_table.py  test_prelude_use.py  test_render_demo.py
tests/planvm/: test_eval_planvm.py  test_seed_planvm.py
tests/prelude/: test_core_bool.py  test_core_combinators.py  test_core_list.py  test_core_nat.py  test_core_option.py  test_core_pair.py  test_core_result.py  test_core_text.py  test_full_prelude.py  test_glass_ir_prelude.py  test_pin_prelude.py
tests/reaver/: _calc_layers.py  test_differential.py  test_repl_calc.py  test_rplan_io.py  test_selfhost.py  test_smoke.py
tests/sanity/: test_bplan_deps.py  test_pin_store.py  test_plan.py  test_rplan_deps.py  test_seed.py  test_seed_compiler_plan.py
tools/: build-self-host.sh  vendor.sh
tutorials/: 01-hello-gallowglass.ipynb  02-typeclasses.ipynb  03-glass-ir.ipynb  04-effects-and-handlers.ipynb  05-interval-arithmetic.ipynb  06-quantum-states.ipynb  README.md  _build_lesson_01.py  _build_lesson_02.py  _build_lesson_03.py  _build_lesson_04.py  _build_lesson_06.py
(+19 files in other folders)
