[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gallowglass-kernel"
version = "0.1.0"
description = "Jupyter kernel for the Gallowglass programming language (PLAN target)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Neal Davis", email = "davisneale@gmail.com" },
]
keywords = ["gallowglass", "plan", "jupyter", "kernel", "language"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]
dependencies = [
    "marduk>=0.1.0",
    "ipykernel>=6.0",
    "jupyter_client>=7.0",
    "blake3",
]

[project.scripts]
gallowglass-kernel = "gallowglass_kernel._cli:main"

[project.urls]
Homepage = "https://github.com/sigilante/gallowglass"
Repository = "https://github.com/sigilante/gallowglass"

[tool.setuptools.packages.find]
include = ["gallowglass_kernel*", "bootstrap*", "dev*", "prelude*"]

[tool.setuptools.package-data]
# The prelude .gls source files are loaded at runtime by mcp_server.load_prelude().
# bootstrap/mcp_server.py resolves them via ../prelude/src/Core relative to its
# own __file__, which lands correctly in site-packages after installation.
"prelude.src" = ["Core/*.gls"]

[tool.pytest.ini_options]
testpaths = ["tests"]
